# django-project-configuration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.local.yml  docker-compose.yml  pyproject.toml
src/ebook_store/: apps.py
src/webapp/: asgi.py  settings.py  urls.py  wsgi.py
