[tool.poetry]
name = "django-project-configuration"
version = "0.1.0"
description = ""
authors = ["Jonathan Meier <jonathanwmeier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
dj-database-url = "^0.5.0"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
